# prometheus_windows_hardware_exporter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  PrometheusWindowsHardwareExporter.sln  README.md  main.cpp
.github/workflows/: pr.yml  release.yml  tag.yml
Installer/: Installer.wixproj  Package.wxs
PrometheusWindowsHardwareExporter/: ArgsParser.cs  CachedMetrics.cs  Config.cs  ExporterHost.cs  HttpServer.cs  Program.cs  PrometheusWindowsHardwareExporter.csproj  Service.cs  packages.lock.json
Scripts/: ci_build.ps1
